--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8" /><meta name="robots" content="noindex" /><meta name="viewport" content="width=device-width,initial-scale=1" /><link href="/favicon.ico" rel="icon" /><script defer="defer" src="asset//static/js/main.0b1cedb2.js"></script><link href="asset//static/css/main.929af2d7.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="robots" content="noindex" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link href="/favicon.ico" rel="icon" />
+    <script defer="defer" src="main.0b1cedb2.js"></script>
+    <link href="main.929af2d7.css" rel="stylesheet">
+</head>
+
+<body>
+</body>
+
+</html>
